# linux-probe

./: README.md  pyproject.toml
probe/: cli.py  loader.py  logging_config.py  module.py  tui.py
probe/modules/: cpu.py  memory.py  network.py  process.py  system.py
