[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probe"
version = "0.0.1"
description = "Linux system diagnostic tool"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "psutil",
    "textual"
]

[tool.setuptools.packages.find]
include = ["probe*"]

[project.scripts]
probe = "probe.cli:app"
probe-monitor = "probe.tui:_cli_entry"
